[package]
name = "txs"
description = ""
version = "0.0.1"
edition = '2021'

[dependencies]
# Aptos dependencies
aptos-sdk = { git = "https://github.com/0o-de-lally/zapatos.git", branch = "vendor" }
aptos = { git = "https://github.com/0o-de-lally/zapatos.git", branch = "vendor" }
bcs = { git = "https://github.com/aptos-labs/bcs.git", branch = "main" }

# Libra wallet
libra-wallet = { git = "https://github.com/0o-de-lally/libra-wallet.git", branch = "main" }

# Others
anyhow = "1.0.70"
async-trait = "0.1.68"
clap = { version = "3.2.23", features = ["derive", "env", "suggestions"] }
once_cell = "1.17.1"
serde = { version = "1.0.159", features = ["derive", "rc"] }
serde_json = "1.0.95"
tokio = { version = "1.28.0", features = ["full"] }
url = { version = "2.3.1", features = ["serde"] }
toml_edit = { version = "0.19.8", features = ["serde"] }
home = "0.5.4"
hex = "0.4.3"
indoc = "2.0.1"
colored = "2.0.0"
