[workspace]
resolver = "2"

members = [
    "txs",
    "libra-wallet",
    "libra-config",
    "genesis-tools"
]

[workspace.package]
authors = ["East Agile <open-source@eastagile.com>"]
edition = "2021"
homepage = "https://0l.network/"
license = "Apache-2.0"
publish = false
repository = "https://github.com/EastAgile/libra-cli"
rust-version = "1.64"

[workspace.dependencies]
# Internal crate dependencies.
libra-wallet = { path = "libra-wallet" }
libra-config = { path = "libra-config" }

# Zapatos dependencies
zapatos = { package = "aptos", git = "https://github.com/0o-de-lally/zapatos.git", branch = "vendor" }
zapatos-rest-client = { package = "aptos-rest-client", git = "https://github.com/0o-de-lally/zapatos.git", branch = "vendor" }
zapatos-sdk = { package = "aptos-sdk", git = "https://github.com/0o-de-lally/zapatos.git", branch = "vendor" }
zapatos-config = { package = "aptos-config", git = "https://github.com/0o-de-lally/zapatos.git", branch ="vendor" }
zapatos-crypto = { package = "aptos-crypto", git = "https://github.com/0o-de-lally/zapatos.git", branch ="vendor"}
zapatos-genesis = { package = "aptos-genesis", git = "https://github.com/0o-de-lally/zapatos.git", branch ="vendor"}
zapatos-keygen = { package = "aptos-keygen", git = "https://github.com/0o-de-lally/zapatos.git", branch ="vendor" }
zapatos-types = { package = "aptos-types", git = "https://github.com/0o-de-lally/zapatos.git", branch ="vendor"}
zapatos-gas = { package = "aptos-gas", git = "https://github.com/0o-de-lally/zapatos.git", branch ="vendor"}
zapatos-vm = { package = "aptos-vm", git = "https://github.com/0o-de-lally/zapatos.git", branch ="vendor"}
zapatos-vm-genesis = { package = "aptos-vm-genesis", git = "https://github.com/0o-de-lally/zapatos.git", branch ="vendor"}
zapatos-framework = { package = "aptos-framework", git = "https://github.com/0o-de-lally/zapatos.git", branch ="vendor"}
zapatos-cached-packages = { package = "aptos-cached-packages", git = "https://github.com/0o-de-lally/zapatos.git", branch ="vendor" }
zapatos-github-client = { package = "aptos-github-client", git = "https://github.com/0o-de-lally/zapatos.git", branch ="vendor"}
bcs = { git = "https://github.com/aptos-labs/bcs.git", branch = "main" }

# Libra dependencies
ol-keys = { git = "https://github.com/simsekgokhan/libra.git", branch = "v6-dwh-err"}
ol-types = { git = "https://github.com/simsekgokhan/libra.git", branch = "v6-dwh-err"}
diem-wallet = { git = "https://github.com/simsekgokhan/libra.git", branch = "v6-dwh-err"}
diem-types = { git = "https://github.com/simsekgokhan/libra.git", branch = "v6-dwh-err"}

# Others
anyhow = "1.0.70"
async-trait = "0.1.68"
blst = "0.3.7"
clap = { version = "4.2.7", features = ["derive", "env", "suggestions"] }
dirs = "5.0.1"
once_cell = "1.17.1"
serde = { version = "1.0.159", features = ["derive", "rc"] }
serde_json = "1.0.95"
serde_yaml = "0.9.21"
tokio = { version = "1.28.0", features = ["full"] }
url = { version = "2.3.1", features = ["serde"] }
hex = "0.4.3"
indoc = "2.0.1"
colored = "2.0.0"
dialoguer = "0.10.4"
console = "0.15.5"
indicatif = "0.17.3"
base64 = "0.13.0"
chrono = { version = "0.4.19", features = ["clock", "serde"] }
ureq = { version = "1.5.4", features = [
    "json",
    "native-tls",
], default_features = false }
